# OpenGLTerrainGenerator

./: CMakeLists.txt  README.md  main.cpp
include/: Colouring.h  Lighting.h  Terrain.h  imageloader.h  vec3f.h
src/: Colouring.cpp  Terrain.cpp
